snapshots/care/data4life/hc-util-sdk-kmp/error/1.11.0-SNAPSHOT/error-1.11.0-20220426.153923-2-all.jar.sha1
d7e11952668eeced4151f8d6ed1c26742b664377